cmake_minimum_required(VERSION 3.15)
project(lab02_sort)

set(CMAKE_CXX_STANDARD 14)

add_executable(a src/a.cpp)
add_executable(a_mergesort draft/a_mergesort.cpp)
add_executable(b src/b.cpp)
add_executable(d src/d.cpp)
add_executable(e draft/e.cpp)
add_executable(f src/f.cpp)
add_executable(h draft/h.cpp)