cmake_minimum_required(VERSION 3.15)
project(lab09_dfs)

set(CMAKE_CXX_STANDARD 14)

add_executable(a src/a.cpp)
add_executable(b src/b.cpp)
add_executable(c src/c.cpp)
add_executable(d src/d.cpp)
add_executable(e src/e.cpp)
add_executable(f src/f.cpp)
add_executable(g src/g.cpp)
add_executable(h src/h.cpp)
add_executable(i src/i.cpp)
add_executable(j src/j.cpp)
add_executable(k src/k.cpp)
add_executable(l src/l.cpp)
add_executable(m src/m.cpp)
add_executable(n src/n.cpp)
add_executable(o src/o.cpp)
add_executable(p src/p.cpp)
add_executable(q src/q.cpp)
add_executable(s src/s.cpp)